# syma

./: .gitignore  CHEATSHEET.md  CLAUDE.md  CLI.md  EFFECTS_CHEATSHEET.md  EFFECTS_TECHNICAL.md  LANGUAGE.md  LICENSE.txt  NOTEBOOK.md  PACKAGES.md  README.md  REPL.md  RULERULES-TUTORIAL.md  RUNTIME.md  TUTORIAL.md  app.css  dump.syma  package-lock.json  package.json  tailwind.config.js  test-notebook-module.md  test-tree-sitter.js  test.json  uni.json  uni.syma  vite-plugin-syma.js  vite.config.js
docs/: effects-addons.md  effects-demo-improvement.md  effects.md  module-compiler-readme.md  modules.md  monorepo-plan.md  monorepo.md  package-manager.md  repl-implementation-plan.md  repl.prd.md  the-book-of-syma.md  writing-style.md
public/: counter.json  modules-demo.json  universe.json
scripts/: build-demo.sh  sym-2-json.js  syma-modules.js
src/: App.jsx  app.css  ast-helpers.js  bf.lisp  counter.lisp  counter.syma  debug.js  effects-demo.lisp  effects-processor.js  events.js  main-syma.js  main.js  main.jsx  primitives.js  runtime.js  style.css  todo.lisp
src/core/: engine.js  (+6 more)
tree-sitter-syma/: Cargo.toml  Makefile  go.mod  test.syma
tree-sitter-syma/bindings/c/: tree-sitter-syma.pc.in
tree-sitter-syma/bindings/go/: binding.go  binding_test.go
tree-sitter-syma/bindings/node/: index.js
tree-sitter-syma/bindings/python/tests/: test_binding.py
tree-sitter-syma/bindings/rust/: build.rs  lib.rs
tree-sitter-syma/bindings/swift/TreeSitterSymaTests/: TreeSitterSymaTests.swift
vscode-syma-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+125 files in other folders)
